--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,13 @@
 
 # Ignore bundler config.
 /.bundle
-
+.DS_Store
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-
+/config/secrets.yml
 /node_modules
 /yarn-error.log
 
